--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book a Service | PetCareConnect</title>
+    <title>Book a Service | PawPalace</title>
+    <link rel="icon" type="image/png" href="images\logo.png">
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -26,7 +27,7 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
-        <h1 class="text-2xl font-bold text-blue-600">PetCareConnect</h1>
+        <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
@@ -104,12 +105,14 @@
             <select
               name="service"
               required
-              class="w-full border rounded px-4 py-2"
-            >
+              class="w-full border rounded px-4 py-2">
               <option disabled selected>Choose a service</option>
               <option>Dog Walking</option>
+              <option>Pet Training</option>
               <option>Grooming</option>
               <option>Pet Boarding</option>
+              <option>Veterinary</option>
+              <option>Pet Sitting</option>
             </select>
           </div>
           <div>
@@ -145,7 +148,7 @@
     <!-- Footer -->
     <footer class="bg-white text-center py-6 mt-16 shadow-inner">
       <p class="text-gray-500 text-sm">
-        &copy; 2025 PetCareConnect. All rights reserved.
+        &copy; 2025 PawPalace. All rights reserved.
       </p>
     </footer>
 
