--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard | PetCareConnect</title>
+    <title>Dashboard | PawPalace</title>
+<link rel="icon" type="image/png" href="images\logo.png">
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -26,7 +27,7 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
-        <h1 class="text-2xl font-bold text-blue-600">PetCareConnect</h1>
+        <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
@@ -51,8 +52,11 @@
           <select id="serviceFilter" class="border px-2 py-1 rounded">
             <option value="All">All</option>
             <option value="Dog Walking">Dog Walking</option>
+            <option value="Pet Training">Pet Training</option>
             <option value="Grooming">Grooming</option>
-            <option value="Boarding">Boarding</option>
+            <option value="Pet Boarding">Pet Boarding</option>
+            <option value="Veterinary">Veterinary</option>
+            <option value="Pet Sitters">Pet Sitting</option>
           </select>
         </div>
 
@@ -123,7 +127,7 @@
     <!-- Footer -->
     <footer class="bg-white text-center py-6 mt-16 shadow-inner">
       <p class="text-gray-500 text-sm">
-        &copy; 2025 PetCareConnect. All rights reserved.
+        &copy; 2025 PawPalace. All rights reserved.
       </p>
     </footer>
 
@@ -156,4 +160,3 @@
     <script src="js/services.js"></script>
   </body>
 </html>
->>>>>>> 407754096a3436bb73b0d5554a0bcc967ee9aed7
