--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services | PetCareConnect</title>
+    <title>Services | PawPalace</title>
+<link rel="icon" type="image/png" href="images\logo.png">
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -83,7 +84,7 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
-        <h1 class="text-2xl font-bold text-blue-600">PetCareConnect</h1>
+        <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="text-blue-600 font-semibold"
@@ -108,8 +109,11 @@
           <button class="filter-btn" data-filter="Dog Walking">
             Dog Walking
           </button>
+          <button class="filter-btn" data-filter="Pet Training">Pet Training</button>
           <button class="filter-btn" data-filter="Grooming">Grooming</button>
-          <button class="filter-btn" data-filter="Boarding">Boarding</button>
+          <button class="filter-btn" data-filter="Pet Boarding">Pet Boarding</button>
+          <button class="filter-btn" data-filter="Veterinary">Veterinary</button>
+          <button class="filter-btn" data-filter="Pet Sitting">Pet Sitting</button>
         </div>
 
         <div class="services-grid" id="servicesList">
@@ -121,7 +125,7 @@
     <!-- Footer -->
     <footer class="bg-white text-center py-6 mt-16 shadow-inner">
       <p class="text-gray-500 text-sm">
-        &copy; 2025 PetCareConnect. All rights reserved.
+        &copy; 2025 PawPalace. All rights reserved.
       </p>
     </footer>
 
@@ -145,4 +149,3 @@
     <script src="js/services.js"></script>
   </body>
 </html>
->>>>>>> 407754096a3436bb73b0d5554a0bcc967ee9aed7
