--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PetCareConnect | Your Pet's Comfort, Our Priority</title>
+    <title>PawPalace | Your Pet's Comfort, Our Priority</title>
+    <link rel="icon" type="image/png" href="images\logo.png">
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -26,7 +27,7 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
-        <h1 class="text-2xl font-bold text-blue-600">PetCareConnect</h1>
+        <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
         <nav class="space-x-6">
           <a href="index.html" class="text-blue-600 font-semibold">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
@@ -38,9 +39,10 @@
     </header>
 
     <p id="userWelcome" class="text-xl text-blue-700 font-semibold"></p>
-
     <!-- Hero Section -->
     <section class="text-center py-20 bg-blue-50">
+<img src="images\logo.png" alt="Logo"
+     style="width: 300px; height: auto; display: block; margin: 30px auto;">
       <div class="max-w-3xl mx-auto">
         <h2 class="text-4xl font-bold text-blue-700 leading-snug">
           Your Pet's Comfort, <span class="text-yellow-500">Our Priority</span>
@@ -70,7 +72,8 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
           <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
             <img
-              src="images/walker.png"
+              src="images\walkers.png"
+              style="width: 250px; height: 200px;"
               alt="Walker"
               class="w-20 mx-auto mb-4"
             />
@@ -81,7 +84,8 @@
           </div>
           <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
             <img
-              src="images/grooming.png"
+              src="images\grooming.png"
+              style="width: 200px; height: 200px;"
               alt="Groomer"
               class="w-20 mx-auto mb-4"
             />
@@ -93,7 +97,8 @@
           </div>
           <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
             <img
-              src="images/boarding.png"
+              src="images\boarding.png"
+              style="width: 250px; height: 200px;"
               alt="Boarding"
               class="w-20 mx-auto mb-4"
             />
@@ -102,6 +107,44 @@
               Safe, loving boarding options for short or long stays.
             </p>
           </div>
+<div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+            <img
+              src="images\vet.png"
+              style="width: 250px; height: 200px;"
+              alt="Veterinary"
+              class="w-20 mx-auto mb-4"
+            />
+            <h3 class="font-bold text-lg">Certified Vets</h3>
+            <p class="text-sm text-gray-600">
+              Connect with licensed veterinarians for routine exams, urgent care or long-term health monitoring.
+            </p>
+          </div>
+<div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+            <img
+              src="images\trainers.png"
+              style="width: 200px; height: 200px;"
+              alt="Trainers"
+              class="w-20 mx-auto mb-4"
+            />
+            <h3 class="font-bold text-lg">Skilled Trainers</h3>
+            <p class="text-sm text-gray-600">
+              From basic commands to advanced tricks, our expert trainers make learning fun and rewarding for your furry friend.
+            </p>
+          </div>
+
+<div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+            <img
+              src="images\sitter.png"
+              alt="Sitters"
+              style="width: 200px; height: 200px;"
+              class="w-20 mx-auto mb-4"
+            />
+            <h3 class="font-bold text-lg">Certified Sitters</h3>
+            <p class="text-sm text-gray-600">
+              From basic commands to advanced tricks, our expert trainers make learning fun and rewarding for your furry friend.
+            </p>
+          </div>
+
         </div>
       </div>
     </section>
@@ -120,6 +163,11 @@
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
           <div class="bg-white p-6 rounded-xl shadow">
+           <img
+              src="images\handshake.png"
+              alt="Handshake"
+              class="w-20 mx-auto mb-4"
+              />   
             <h3 class="text-xl font-semibold text-blue-600 mb-2">
               Our Mission
             </h3>
@@ -129,6 +177,11 @@
             </p>
           </div>
           <div class="bg-white p-6 rounded-xl shadow">
+              <img
+              src="images\lightbulb.png"
+              alt="Lightbulb"
+              class="w-20 mx-auto mb-4"
+              />
             <h3 class="text-xl font-semibold text-blue-600 mb-2">Our Vision</h3>
             <p>
               Building a world where every pet is loved, cared for, and treated
@@ -136,6 +189,11 @@
             </p>
           </div>
           <div class="bg-white p-6 rounded-xl shadow">
+            <img
+              src="images\shield.png"
+              alt="Shield"
+              class="w-20 mx-auto mb-4"
+              />
             <h3 class="text-xl font-semibold text-blue-600 mb-2">
               Why Choose Us
             </h3>
@@ -168,7 +226,7 @@
                 class="mx-auto rounded-full mb-3"
                 alt="Team Member"
               />
-              <h4 class="font-bold">Teammate 2</h4>
+              <h4 class="font-bold">Swarada Deshpande</h4>
               <p class="text-sm text-gray-600">Backend Integration</p>
             </div>
             <div class="text-center">
@@ -177,7 +235,7 @@
                 class="mx-auto rounded-full mb-3"
                 alt="Team Member"
               />
-              <h4 class="font-bold">Teammate 3</h4>
+              <h4 class="font-bold">Asmi Tatawar</h4>
               <p class="text-sm text-gray-600">UI/UX Designer</p>
             </div>
           </div>
@@ -235,7 +293,7 @@
               <h3 class="text-xl font-semibold text-blue-600 mb-2">
                 Contact Information
               </h3>
-              <p><strong>Email:</strong> support@petcareconnect.com</p>
+              <p><strong>Email:</strong> support@PawPalace.com</p>
               <p><strong>Phone:</strong> +91 98765 43210</p>
               <p><strong>Address:</strong> PetCare HQ, Pune, Maharashtra</p>
             </div>
@@ -289,7 +347,7 @@
     <!-- Footer -->
     <footer class="bg-white text-center py-6 mt-16 shadow-inner">
       <p class="text-gray-500 text-sm">
-        &copy; 2025 PetCareConnect. All rights reserved.
+        &copy; 2025 PawPalace. All rights reserved.
       </p>
     </footer>
 
