--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Sign Up - PawPalace</title>
+<link rel="icon" type="image/png" href="images\logo.png">
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -23,7 +24,7 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
-        <h1 class="text-2xl font-bold text-blue-600">PetCareConnect</h1>
+        <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
         <nav class="space-x-6">
           <a href="index.html" class="text-blue-600 font-semibold">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
