Login form updated

--- a/login.html
+++ b/login.html
@@ -32,19 +32,12 @@
           <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
           <a href="login.html" class="hover:text-blue-600">Login</a>
         </nav>
-      </div>
-    </header>
-    <div class="bg-white shadow-lg rounded-xl max-w-md w-full p-6 ">
-      <!-- Lottie Animation -->
+        
+      <div class="bg-white shadow-lg rounded-xl max-w-md w-full p-6">
+
+      <!-- Cute Dog GIF -->
       <div class="text-center mb-4">
-        <lottie-player
-          src="https://assets1.lottiefiles.com/packages/lf20_3rwasyjy.json"
-          background="transparent"
-          speed="1"
-          style="height: 120px"
-          loop
-          autoplay
-        ></lottie-player>
+       <img src="images\cutedog.gif" alt="Cute Dog" class="mx-auto h-32">
       </div>
 
       <!-- Tab Buttons -->
