--- a/login.html
+++ b/login.html
@@ -35,17 +35,11 @@
       </div>
     </header>
     <div class="bg-white shadow-lg rounded-xl max-w-md w-full p-6 justify-center align-items-center mx-auto mt-10">
-      <!-- Lottie Animation -->
+
+      <!-- Cute Dog GIF -->
       <div class="text-center mb-4">
-        <lottie-player
-          src="https://assets1.lottiefiles.com/packages/lf20_3rwasyjy.json"
-          background="transparent"
-          speed="1"
-          style="height: 120px"
-          loop
-          autoplay
-        ></lottie-player>
-      </div>
+        <img src="images\cutedog.gif" alt="Cute Dog" class="mx-auto h-32">
+       </div>
 
       <!-- Tab Buttons -->
       <div class="flex justify-around mb-6">
