--- a/login.html
+++ b/login.html
@@ -74,20 +74,13 @@
 
       <!-- Sign Up Form (Hidden by default) -->
       <form id="signupForm" class="space-y-4 hidden">
+        <input type="text" name="full_name" placeholder="Full Name" required />
+        <input type="email" name="email" placeholder="Email" required />
         <input
-          name="full_name"
-          type="text"
-          placeholder="Full Name"
-          required
-          ...
-        />
-        <input name="email" type="email" placeholder="Email" required ... />
-        <input
-          name="password"
           type="password"
+          name="password"
           placeholder="Create Password"
           required
-          ...
         />
 
         <button
