--- a/login.html
+++ b/login.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Sign Up - PawPalace</title>
-    <link rel="icon" type="image/png" href="images\logo.png" />
+    <link rel="icon" type="image/png" href="images/logo.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <style>
-      .tab-active {
-        @apply bg-blue-600 text-white;
+      /* Background image with 80% opacity */
+      body::before {
+        content: "";
+        background: url("images/background.png") no-repeat center center / cover;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.2;
+        z-index: -1;
       }
+
+      
     </style>
   </head>
   <body class="bg-gradient-to-br from-blue-50 to-blue-100 text-gray-800">
     <!-- Navbar -->
     <header class="bg-white shadow-md sticky top-0 z-50">
-      <div
-        class="container mx-auto px-4 py-4 flex justify-between items-center"
-      >
+      <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
         <nav class="space-x-6">
           <a href="index.html" class="text-blue-600 font-semibold">Home</a>
@@ -32,12 +41,12 @@
         </nav>
       </div>
     </header>
-    <div
-      class="bg-white shadow-lg rounded-xl max-w-md w-full p-6 justify-center align-items-center mx-auto mt-10"
-    >
+
+    <!-- Main Card -->
+    <div class="bg-white shadow-lg rounded-xl max-w-md w-full p-6 mx-auto mt-10">
       <!-- Cute Dog GIF -->
       <div class="text-center mb-4">
-        <img src="images\cutedog.gif" alt="Cute Dog" class="mx-auto h-32" />
+        <img src="images/cutedog.gif" alt="Cute Dog" class="mx-auto h-32" />
       </div>
 
       <!-- Tab Buttons -->
@@ -55,45 +64,21 @@
 
       <!-- Login Form -->
       <form id="loginForm" class="space-y-4">
-        <input name="email" type="email" placeholder="Email" required ... />
-        <input
-          name="password"
-          type="password"
-          placeholder="Password"
-          required
-          ...
-        />
+        <input name="email" type="email" placeholder="Email" required class="w-full p-2 border rounded" />
+        <input name="password" type="password" placeholder="Password" required class="w-full p-2 border rounded" />
 
-        <button
-          type="submit"
-          class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition"
-        >
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">
           Login
         </button>
       </form>
 
       <!-- Sign Up Form (Hidden by default) -->
       <form id="signupForm" class="space-y-4 hidden">
-        <input
-          name="full_name"
-          type="text"
-          placeholder="Full Name"
-          required
-          ...
-        />
-        <input name="email" type="email" placeholder="Email" required ... />
-        <input
-          name="password"
-          type="password"
-          placeholder="Create Password"
-          required
-          ...
-        />
+        <input name="full_name" type="text" placeholder="Full Name" required class="w-full p-2 border rounded" />
+        <input name="email" type="email" placeholder="Email" required class="w-full p-2 border rounded" />
+        <input name="password" type="password" placeholder="Create Password" required class="w-full p-2 border rounded" />
 
-        <button
-          type="submit"
-          class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition"
-        >
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">
           Sign Up
         </button>
       </form>
@@ -105,40 +90,22 @@
       const loginForm = document.getElementById("loginForm");
       const signupForm = document.getElementById("signupForm");
 
-      // ✨ Tab switching
+      // Tab switching
       loginTab.addEventListener("click", () => {
-        loginTab.classList.add(
-          "text-blue-600",
-          "border-b-2",
-          "border-blue-500"
-        );
-        signupTab.classList.remove(
-          "text-blue-600",
-          "border-b-2",
-          "border-blue-500"
-        );
-
+        loginTab.classList.add("text-blue-600", "border-b-2", "border-blue-500");
+        signupTab.classList.remove("text-blue-600", "border-b-2", "border-blue-500");
         loginForm.classList.remove("hidden");
         signupForm.classList.add("hidden");
       });
 
       signupTab.addEventListener("click", () => {
-        signupTab.classList.add(
-          "text-blue-600",
-          "border-b-2",
-          "border-blue-500"
-        );
-        loginTab.classList.remove(
-          "text-blue-600",
-          "border-b-2",
-          "border-blue-500"
-        );
-
+        signupTab.classList.add("text-blue-600", "border-b-2", "border-blue-500");
+        loginTab.classList.remove("text-blue-600", "border-b-2", "border-blue-500");
         signupForm.classList.remove("hidden");
         loginForm.classList.add("hidden");
       });
 
-      // ✨ Signup form handling
+      // Signup form handling
       signupForm.addEventListener("submit", function (e) {
         e.preventDefault();
         const formData = new FormData(signupForm);
@@ -161,7 +128,7 @@
           });
       });
 
-      // ✨ Login form handling
+      // Login form handling
       loginForm.addEventListener("submit", function (e) {
         e.preventDefault();
         const formData = new FormData(loginForm);
@@ -193,6 +160,7 @@
       </p>
     </footer>
 
+    <!-- Scripts -->
     <script src="js/chatbot.js"></script>
     <script src="js/main.js"></script>
     <script src="js/bookingTable.js"></script>
