--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a
             href="booking.html"
             class="bg-yellow-400 text-white px-6 py-3 rounded-full shadow hover:bg-yellow-500 transition"
-            >Become a Provider</a
+            >Book an appointment</a
           >
         </div>
       </div>
