--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 alt="Team Member"
               />
               <h4 class="font-bold">Jidnyasa Patil</h4>
-              <p class="text-sm text-gray-600">Frontend Developer</p>
+              <p class="text-sm text-gray-600">Frontend and Backend Developer</p>
             </div>
             <div class="text-center">
               <img
@@ -227,7 +227,7 @@
                 alt="Team Member"
               />
               <h4 class="font-bold">Swarada Deshpande</h4>
-              <p class="text-sm text-gray-600">Backend Integration</p>
+              <p class="text-sm text-gray-600">Frontend Developer</p>
             </div>
             <div class="text-center">
               <img
