--- a/services.html
+++ b/services.html
@@ -4,25 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services | PawPalace</title>
-<link rel="icon" type="image/png" href="images\logo.png">
+    <link rel="icon" type="image/png" href="images/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
-      rel="stylesheet"
-    />
     <style>
       body {
-        font-family: 'Segoe UI', sans-serif;
+        font-family: "Segoe UI", sans-serif;
+        background: #fefefe;
         margin: 0;
         padding: 0;
-        background: #fefefe;
       }
 
-  
       .filter-bar {
         display: flex;
         justify-content: center;
@@ -30,7 +25,7 @@
         margin: 1rem;
         flex-wrap: wrap;
       }
-  
+
       .filter-btn {
         padding: 0.5rem 1rem;
         background-color: #ddd;
@@ -39,13 +34,13 @@
         cursor: pointer;
         transition: background-color 0.3s;
       }
-  
+
       .filter-btn.active,
       .filter-btn:hover {
         background-color: #2a9d8f;
         color: white;
       }
-  
+
       .services-grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -54,26 +49,52 @@
         max-width: 1200px;
         margin: auto;
       }
-  
+
       .service-card {
         background: white;
         padding: 1.5rem;
         border-radius: 15px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         transition: transform 0.2s ease;
+        text-align: center;
       }
-  
+
       .service-card:hover {
         transform: translateY(-5px);
       }
-  
-      .service-card h3 {
-        color: #264653;
-        margin-top: 0;
+
+      .service-card img {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto 1rem auto;
+        display: block;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
       }
-  
+
+      .service-card img:hover {
+        transform: scale(1.1);
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      .service-card h4 {
+        margin: 0.5rem 0 0.2rem;
+        font-weight: 600;
+      }
+
       .service-card p {
+        margin: 0.2rem 0;
+        font-size: 0.9rem;
         color: #555;
+      }
+
+      .sub-title {
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: #2563eb;
+        margin: 2rem 0 0.5rem;
+        grid-column: 1 / -1;
       }
     </style>
   </head>
@@ -97,7 +118,7 @@
       </div>
     </header>
 
-    <!-- Service Providers Section -->
+    <!-- Services Section -->
     <section class="py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center text-blue-700 mb-10">
@@ -109,15 +130,23 @@
           <button class="filter-btn" data-filter="Dog Walking">
             Dog Walking
           </button>
-          <button class="filter-btn" data-filter="Pet Training">Pet Training</button>
+          <button class="filter-btn" data-filter="Pet Training">
+            Pet Training
+          </button>
           <button class="filter-btn" data-filter="Grooming">Grooming</button>
-          <button class="filter-btn" data-filter="Pet Boarding">Pet Boarding</button>
-          <button class="filter-btn" data-filter="Veterinary">Veterinary</button>
-          <button class="filter-btn" data-filter="Pet Sitting">Pet Sitting</button>
+          <button class="filter-btn" data-filter="Pet Boarding">
+            Pet Boarding
+          </button>
+          <button class="filter-btn" data-filter="Veterinary">
+            Veterinary
+          </button>
+          <button class="filter-btn" data-filter="Pet Sitting">
+            Pet Sitting
+          </button>
         </div>
 
         <div class="services-grid" id="servicesList">
-          <!-- Cards will be injected here by JS -->
+          <!-- Dynamic content will load here -->
         </div>
       </div>
     </section>
@@ -129,23 +158,133 @@
       </p>
     </footer>
 
-    <!-- Chatbot Button -->
-    <button id="chatbotToggle" class="chatbot-toggle">💬</button>
+    <script>
+      const serviceSubMap = {
+        "Dog Walking": [
+          "Daily Dog Walks",
+          "Weekend Walk Plans",
+          "Puppy Walks",
+          "Senior Dog Walks",
+          "Adventure Walks",
+          "Group Walks",
+          "Late-Night Walks",
+          "Custom Walk Plans",
+        ],
+        "Pet Training": [
+          "Puppy Basics",
+          "Obedience Training",
+          "Leash Training",
+          "Potty Training",
+          "Behaviour Correction",
+          "Socialization Sessions",
+          "Advanced Commands",
+          "Custom Training Plans",
+        ],
+        Grooming: [
+          "Full Grooming",
+          "Paw Spa",
+          "Bath & Brush",
+          "Nail Trimming",
+          "Ear Cleaning",
+          "De-shedding Treatment",
+          "Teeth Brushing",
+          "Paw & Pad Care",
+        ],
+        "Pet Boarding": [
+          "Overnight Pet Boarding",
+          "Holiday Boarding",
+          "Weekend Stays",
+          "Long-Term Boarding",
+          "Private Suite Boarding",
+          "Play & Stay",
+          "Boarding with Daily Walks",
+          "Home-Style Boarding",
+        ],
+        Veterinary: [
+          "General Health Check-up",
+          "Vaccinations",
+          "Deworming & Parasite Control",
+          "Emergency Care",
+          "Diagnostic Testing",
+          "Spaying & Neutering",
+          "Dental Care",
+          "Senior Pet Care",
+        ],
+        "Pet Sitting": [
+          "In-Home Pet Sitting",
+          "Drop-In Visits",
+          "Overnight Sitting",
+          "Weekend Sitting",
+          "Senior Pet Sitting",
+          "Puppy Sitting",
+          "Multiple Pet Care",
+          "Daily Updates",
+        ],
+      };
 
-    <div class="chatbot-container" id="chatbot">
-      <div class="chatbot-header">PawPal Bot</div>
-      <div class="chatbot-messages" id="chatMessages"></div>
-      <div class="chatbot-input">
-        <input type="text" id="chatInput" placeholder="Type your message..." />
-        <button id="sendBtn">Send</button>
-      </div>
-    </div>
+      let providerData = {};
 
-    <script src="js/chatbot.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/bookingTable.js"></script>
-    <script src="js/analytics.js"></script>
-    <script src="js/booking.js"></script>
-    <script src="js/services.js"></script>
+      fetch("data/providers.json")
+        .then((res) => res.json())
+        .then((data) => {
+          providerData = data;
+          renderAll(); // Render initially
+        });
+
+      const filterButtons = document.querySelectorAll(".filter-btn");
+      const servicesList = document.getElementById("servicesList");
+
+      filterButtons.forEach((button) => {
+        button.addEventListener("click", () => {
+          const filter = button.dataset.filter;
+
+          filterButtons.forEach((btn) => btn.classList.remove("active"));
+          button.classList.add("active");
+
+          servicesList.innerHTML = "";
+
+          if (filter === "all") {
+            renderAll();
+          } else {
+            const subServices = serviceSubMap[filter];
+            subServices.forEach((sub) => {
+              if (providerData[filter] && providerData[filter][sub]) {
+                renderSubSection(sub, providerData[filter][sub]);
+              }
+            });
+          }
+        });
+      });
+
+      function renderAll() {
+        for (const category in providerData) {
+          for (const sub in providerData[category]) {
+            renderSubSection(sub, providerData[category][sub]);
+          }
+        }
+      }
+
+      function renderSubSection(subService, providers) {
+        const subTitle = document.createElement("h3");
+        subTitle.className = "sub-title";
+        subTitle.textContent = subService;
+        servicesList.appendChild(subTitle);
+
+        providers.forEach((provider) => {
+          const card = document.createElement("div");
+          card.className = "service-card";
+
+          card.innerHTML = `
+            <img src="${provider.image}" alt="${provider.name}" />
+            <h4>${provider.name}</h4>
+            <p>⭐ ${provider.rating} / 5</p>
+            <p>💰 ${provider.payment}</p>
+            <p>📞 ${provider.contact}</p>
+          `;
+
+          servicesList.appendChild(card);
+        });
+      }
+    </script>
   </body>
 </html>
