--- a/booking.html
+++ b/booking.html
@@ -17,6 +17,7 @@
     <style>
       body {
         font-family: "Poppins", sans-serif;
+        cursor: url("images/cursor.cur"), auto;
       }
     </style>
   </head>
