--- a/login.html
+++ b/login.html
@@ -11,6 +11,12 @@
     />
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <style>
+      body {
+        font-family: "Poppins", sans-serif;
+        cursor: url("images/cursor.cur"), auto;
+      }
+    </style>
+    <style>
       /* Background image with 80% opacity */
       body::before {
         content: "";
