--- a/login.html
+++ b/login.html
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Sign Up - PawPalace</title>
     <link rel="icon" type="image/png" href="images/logo.png" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <style>
       body {
         font-family: "Poppins", sans-serif;
         cursor: url("images/cursor.cur"), auto;
       }
-    </style>
-    <style>
-      /* Background image with 80% opacity */
+
       body::before {
         content: "";
         background: url("images/background.png") no-repeat center center / cover;
@@ -29,9 +24,9 @@
         opacity: 0.4;
         z-index: -1;
       }
-
     </style>
   </head>
+
   <body class="bg-gradient-to-br from-blue-50 to-blue-100 text-gray-800">
     <!-- Navbar -->
     <header class="bg-white shadow-md sticky top-0 z-50">
@@ -49,53 +44,39 @@
 
     <!-- Main Card -->
     <div class="bg-white shadow-lg rounded-xl max-w-md w-full p-6 mx-auto mt-10">
-      <!-- Cute Dog GIF -->
       <div class="text-center mb-4">
         <img src="images/cutedog.gif" alt="Cute Dog" class="mx-auto h-32" />
       </div>
 
       <!-- Tab Buttons -->
       <div class="flex justify-around mb-6">
-        <button
-          id="loginTab"
-          class="w-1/2 py-2 font-bold border-b-2 border-blue-500 text-blue-600"
-        >
-          Login
-        </button>
-        <button id="signupTab" class="w-1/2 py-2 font-bold text-gray-500">
-          Sign Up
-        </button>
+        <button id="loginTab" class="w-1/2 py-2 font-bold border-b-2 border-blue-500 text-blue-600">Login</button>
+        <button id="signupTab" class="w-1/2 py-2 font-bold text-gray-500">Sign Up</button>
       </div>
 
       <!-- Login Form -->
       <form id="loginForm" class="space-y-4">
         <input name="email" type="email" placeholder="Email" required class="w-full p-2 border rounded" />
         <input name="password" type="password" placeholder="Password" required class="w-full p-2 border rounded" />
-
-        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">
-          Login
-        </button>
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Login</button>
       </form>
 
-      <!-- Sign Up Form (Hidden by default) -->
+      <!-- Sign Up Form -->
       <form id="signupForm" class="space-y-4 hidden">
         <input name="full_name" type="text" placeholder="Full Name" required class="w-full p-2 border rounded" />
         <input name="email" type="email" placeholder="Email" required class="w-full p-2 border rounded" />
         <input name="password" type="password" placeholder="Create Password" required class="w-full p-2 border rounded" />
-
-        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">
-          Sign Up
-        </button>
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Sign Up</button>
       </form>
     </div>
 
+    <!-- Script Logic -->
     <script>
       const loginTab = document.getElementById("loginTab");
       const signupTab = document.getElementById("signupTab");
       const loginForm = document.getElementById("loginForm");
       const signupForm = document.getElementById("signupForm");
 
-      // Tab switching
       loginTab.addEventListener("click", () => {
         loginTab.classList.add("text-blue-600", "border-b-2", "border-blue-500");
         signupTab.classList.remove("text-blue-600", "border-b-2", "border-blue-500");
@@ -110,67 +91,45 @@
         loginForm.classList.add("hidden");
       });
 
-      // Signup form handling
       signupForm.addEventListener("submit", function (e) {
         e.preventDefault();
-        const formData = new FormData(signupForm);
+        const name = signupForm.full_name.value;
+        const email = signupForm.email.value;
+        const password = signupForm.password.value;
 
-        fetch("php/signup.php", {
-          method: "POST",
-          body: new URLSearchParams(formData),
-        })
-          .then((res) => res.text())
-          .then((data) => {
-            if (data === "success") {
-              alert("Signup successful!");
-              loginTab.click(); // Automatically switch to login
-            } else {
-              alert("Signup failed. Email may already exist.");
-            }
-          })
-          .catch((error) => {
-            console.error("Signup error:", error);
-          });
+        const users = JSON.parse(localStorage.getItem("users") || "[]");
+        if (users.find((u) => u.email === email)) {
+          alert("Signup failed. Email already exists.");
+        } else {
+          users.push({ name, email, password });
+          localStorage.setItem("users", JSON.stringify(users));
+          alert("Signup successful!");
+          loginTab.click();
+        }
       });
 
-      // Login form handling
       loginForm.addEventListener("submit", function (e) {
         e.preventDefault();
-        const formData = new FormData(loginForm);
+        const email = loginForm.email.value;
+        const password = loginForm.password.value;
 
-        fetch("php/login.php", {
-          method: "POST",
-          body: new URLSearchParams(formData),
-        })
-          .then((res) => res.json())
-          .then((data) => {
-            if (data.status === "success") {
-              localStorage.setItem("isLoggedIn", "true");
-              localStorage.setItem("userName", data.name);
-              window.location.href = "index.html";
-            } else {
-              alert("Login failed. Please check your credentials.");
-            }
-          })
-          .catch((error) => {
-            console.error("Login error:", error);
-          });
+        const users = JSON.parse(localStorage.getItem("users") || "[]");
+        const user = users.find((u) => u.email === email && u.password === password);
+
+        if (user) {
+          localStorage.setItem("isLoggedIn", "true");
+          localStorage.setItem("userName", user.name);
+          alert("Login successful!");
+          window.location.href = "dashboard.html";
+        } else {
+          alert("Login failed. Check your email or password.");
+        }
       });
     </script>
 
     <!-- Footer -->
     <footer class="bg-white text-center py-6 mt-16 shadow-inner">
-      <p class="text-gray-500 text-sm">
-        &copy; 2025 PawPalace. All rights reserved.
-      </p>
+      <p class="text-gray-500 text-sm">&copy; 2025 PawPalace. All rights reserved.</p>
     </footer>
-
-    <!-- Scripts -->
-    <script src="js/chatbot.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/bookingTable.js"></script>
-    <script src="js/analytics.js"></script>
-    <script src="js/booking.js"></script>
-    <script src="js/services.js"></script>
   </body>
 </html>
