--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
+      <div class="flex items-center space-x-2">
+        <img src="images/logo.png" alt="Logo" class="w-20 h-20 rounded-full" />
         <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
+      </div>
+      
         <nav class="space-x-6">
           <a href="index.html" class="text-blue-600 font-semibold">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
@@ -72,13 +76,13 @@
       <div class="swiper mySwiper rounded-xl overflow-hidden">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="images\dog-trainer.jpg" class="w-full h-[300px] object-cover" alt="Pet 1" />
+            <img src="images\dog-trainer.jpg" class="w-full h-[50px] object-cover" alt="Pet 1" />
           </div>
           <div class="swiper-slide">
-            <img src="images\th.jpg" class="w-full h-[300px] object-cover" alt="Pet 2" />
+            <img src="images\th.jpg" class="w-full h-[50px] object-cover" alt="Pet 2" />
           </div>
           <div class="swiper-slide">
-            <img src="images\Luxury-Dog-Boarding-Hamilton.2103220830495.jpg" class="w-full h-[300px] object-cover" alt="Pet 3" />
+            <img src="images\Luxury-Dog-Boarding-Hamilton.2103220830495.jpg" class="w-full h-[50px] object-cover" alt="Pet 3" />
           </div>
         </div>
         <!-- Navigation buttons -->
