--- a/booking.html
+++ b/booking.html
@@ -28,7 +28,10 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
+      <div class="flex items-center space-x-2">
+        <img src="images/logo.png" alt="Logo" class="w-20 h-20 rounded-full" />
         <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
+      </div>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
@@ -36,7 +39,7 @@
             >Book Now</a
           >
           <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
-          <a href="login.html" class="hover:text-blue-600">User</a>
+          <a href="login.html" class="hover:text-blue-600">Login</a>
         </nav>
       </div>
     </header>
