--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,10 @@
     <!-- Navbar -->
     <header class="bg-white shadow-md sticky top-0 z-50">
       <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
+        <div class="flex items-center space-x-2">
+          <img src="images/logo.png" alt="Logo" class="w-20 h-20 rounded-full" />
+          <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
+        </div>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
