--- a/services.html
+++ b/services.html
@@ -16,11 +16,8 @@
         background: #fefefe;
         margin: 0;
         padding: 0;
-<<<<<<< HEAD
         background: #fefefe;
         cursor: url("images/cursor.cur"), auto;
-=======
->>>>>>> a38b9a0d061cac6e429f37720f73b844ba9e422c
       }
 
       .filter-bar {
@@ -110,7 +107,10 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
+      <div class="flex items-center space-x-2">
+        <img src="images/logo.png" alt="Logo" class="w-20 h-20 rounded-full" />
         <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
+      </div>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="text-blue-600 font-semibold"
